ERROR.txt
/home/users/xw/xwojac00/CompilerProject2015-master (3)/CompilerProject2015-master$ make
gcc -Wall -std=c99 -pedantic -g -lm -c main.c
main.c: In function 'main':
main.c:49:9: warning: 'f' may be used uninitialized in this function [-Wmaybe-uninitialized]
         fclose(f);
         ^
gcc -Wall -std=c99 -pedantic -g -lm -c str.c
gcc -Wall -std=c99 -pedantic -g -lm -c instlist.c
gcc -Wall -std=c99 -pedantic -g -lm -c stable.c
gcc -Wall -std=c99 -pedantic -g -lm -c interpret.c
gcc -Wall -std=c99 -pedantic -g -lm -c errors.c
gcc -Wall -std=c99 -pedantic -g -lm -c ial.c
gcc -Wall -std=c99 -pedantic -g -lm -c parser.c
parser.c: In function 'comp_expr':
parser.c:564:4: warning: implicit declaration of function 'Tpush' [-Wimplicit-function-declaration]
    chba = Tpush(&St);
    ^
gcc -Wall -std=c99 -pedantic -g -lm -c lex.c
gcc -Wall -std=c99 -pedantic -g -lm -c 3ac.c
3ac.c: In function 'genInstr':
3ac.c:33:5: warning: function returns address of local variable [-Wreturn-local-addr]
     return &TItem;
     ^
gcc -Wall -std=c99 -pedantic -g -lm -c varframe.c
varframe.c: In function 'FrameDelete':
varframe.c:51:21: warning: unused variable 'pom' [-Wunused-variable]
   struct FrameItem *pom;
                     ^
varframe.c: In function 'FrameCreate':
varframe.c:88:21: error: invalid type argument of '->' (have 'tLData')
       if (prom->data->isinit){
                     ^
*** Error code 1

Stop.
